k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: resume-analyzer-route
  namespace: ai-resume
spec:
  parentRefs:
    - name: netflix-gateway
      namespace: dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /resume
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: resume-analyzer
          port: 80
